k8s/middleware-cors.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: panos-mcp-service-cors
  namespace: panos-mcp-service
spec:
  headers:
    accessControlAllowMethods:
      - GET
      - OPTIONS
      - PUT
      - POST
    accessControlAllowOriginList:
      - "https://mcp.cdot.io"
    accessControlAllowCredentials: true
    accessControlMaxAge: 100
    addVaryHeader: true
