k8s/middleware-rate-limit.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: rate-limit
  namespace: panos
spec:
  rateLimit:
    average: 100
    burst: 50
